--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,27 @@ body {
   border-inline: 1px solid #343a40;
   height: 100vh;
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  place-content: center;
+}
+
+.videoWrapper:first-child {
+  transform: scale(-1, 1);
+}
+
+.videoWrapper:last-child {
+  border-left: 2px solid #343a40;
+}
+
+video {
+  max-width: 100%;
+  display: block;
+  opacity: 0;
+}
+
+video.currentVideo {
+  opacity: 1;
 }
 
 .player {
@@ -45,7 +66,19 @@ svg {
   display: flex;
   color: #868e96;
   justify-content: center;
-  gap: 2px;
+}
+.cursor svg {
+  padding: 2px;
+}
+.animation .cursor {
+  animation: shake-y 0.5s;
+}
+
+.cursor .active {
+  color: #ffd43b;
+  transform: scale(1.5);
+  transition: transform 0.3s;
+  transform-origin: center;
 }
 
 .round {
@@ -55,25 +88,61 @@ svg {
   transform: translate(-50%, 0%);
 }
 
-.shake {
-  animation: shake-x 0.5s;
+.videoWrapper {
+  display: grid;
 }
 
-@keyframes shake-x {
+.videoWrapper > * {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+@keyframes shake-y {
   0%,
   100% {
-    transform: translateX(0%);
+    transform: translateY(0%);
   }
   20% {
-    transform: translateX(-3%);
+    transform: translateY(-5%);
   }
   40% {
-    transform: translateX(3%);
+    transform: translateY(5%);
   }
   60% {
-    transform: translateX(-3%);
+    transform: translateY(-5%);
   }
   80% {
-    transform: translateX(3%);
+    transform: translateY(5%);
+  }
+}
+
+output {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    'Liberation Mono', 'Courier New', monospace;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  padding: 4rem;
+  left: 0%;
+  bottom: 0%;
+  white-space: nowrap;
+  color: #80f058;
+  text-transform: uppercase;
+  transform-origin: center;
+  animation: appear 3s both;
+}
+
+@keyframes appear {
+  0% {
+    transform: scale(5);
+    opacity: 1;
+  }
+  20%,
+  80% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
